--- a/EgitimPlatformuAI/Views/NewQuestion/NewQuestionScreen.storyboard
+++ b/EgitimPlatformuAI/Views/NewQuestion/NewQuestionScreen.storyboard
@@ -24,8 +24,8 @@
                                     <constraint firstAttribute="width" constant="75" id="9Ss-Pd-rHL"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5rY-xO-ofB">
-                                <rect key="frame" x="20" y="513.66666666666663" width="353" height="210"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="5rY-xO-ofB">
+                                <rect key="frame" x="20" y="553.66666666666663" width="353" height="170"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Answer 1" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DwT-Ut-5i4">
                                         <rect key="frame" x="0.0" y="0.0" width="353" height="34"/>
@@ -35,28 +35,28 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Answer 2" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xIA-NY-Xu5">
-                                        <rect key="frame" x="0.0" y="44" width="353" height="34"/>
+                                        <rect key="frame" x="0.0" y="34" width="353" height="34"/>
                                         <color key="backgroundColor" name="aliceblUE"/>
                                         <color key="textColor" name="darkBlue"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Answer 3" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ht5-tf-YdQ">
-                                        <rect key="frame" x="0.0" y="88" width="353" height="34"/>
+                                        <rect key="frame" x="0.0" y="68" width="353" height="34"/>
                                         <color key="backgroundColor" name="aliceblUE"/>
                                         <color key="textColor" name="darkBlue"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Answer 4" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YE9-mo-dhg">
-                                        <rect key="frame" x="0.0" y="132" width="353" height="34"/>
+                                        <rect key="frame" x="0.0" y="102" width="353" height="34"/>
                                         <color key="backgroundColor" name="aliceblUE"/>
                                         <color key="textColor" name="darkBlue"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter the Correct Answer" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lc7-c2-3sT">
-                                        <rect key="frame" x="0.0" y="176" width="353" height="34"/>
+                                        <rect key="frame" x="0.0" y="136" width="353" height="34"/>
                                         <color key="backgroundColor" name="aliceblUE"/>
                                         <color key="textColor" name="darkBlue"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -65,7 +65,7 @@
                                 </subviews>
                             </stackView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter the Question" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CNB-Ia-y9T">
-                                <rect key="frame" x="20" y="449.66666666666669" width="353" height="34"/>
+                                <rect key="frame" x="20" y="489.66666666666669" width="353" height="34.000000000000057"/>
                                 <color key="backgroundColor" name="aliceblUE"/>
                                 <color key="textColor" name="darkBlue"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -85,7 +85,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Example Question" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="O9j-9L-fBf">
-                                <rect key="frame" x="20" y="184" width="353" height="235.66666666666663"/>
+                                <rect key="frame" x="20" y="184.00000000000003" width="353" height="275.66666666666674"/>
                                 <color key="backgroundColor" name="darkBlue"/>
                                 <color key="textColor" name="porcelain"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -125,11 +125,12 @@
                     </view>
                     <connections>
                         <outlet property="lottieView" destination="dx0-VB-ZfD" id="IGP-ah-Fdk"/>
+                        <outlet property="questionLabel" destination="CNB-Ia-y9T" id="I2q-Sb-My8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-37" y="4"/>
+            <point key="canvasLocation" x="-37.404580152671755" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
