--- a/EgitimPlatformuAI/Views/WritingScreen/WritingScreen.storyboard
+++ b/EgitimPlatformuAI/Views/WritingScreen/WritingScreen.storyboard
@@ -83,7 +83,7 @@
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jKP-Cj-woj">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="393" height="321"/>
                                                                                 <subviews>
-                                                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter your answer here." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uOg-wG-fBb">
+                                                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uOg-wG-fBb">
                                                                                         <rect key="frame" x="10" y="10" width="373" height="311"/>
                                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <color key="textColor" name="porcelain"/>
@@ -254,7 +254,7 @@
             <color red="0.94117647058823528" green="0.73333333333333328" blue="0.47058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
