--- a/EgitimPlatformuAI/CustomViews/CourseScreenTableViewCell/CourseScreenTableViewCell.xib
+++ b/EgitimPlatformuAI/CustomViews/CourseScreenTableViewCell/CourseScreenTableViewCell.xib
@@ -23,28 +23,40 @@
                         <color key="textColor" name="aliceblUE"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l0Q-XD-Z5z">
-                        <rect key="frame" x="292" y="10" width="39" height="39"/>
-                        <color key="tintColor" name="summer"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="39" id="6yL-TB-vae"/>
-                        </constraints>
-                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="8VT-mp-Tty">
+                        <rect key="frame" x="191.33333333333337" y="10" width="139.66666666666663" height="39"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="questionNumber" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OdG-nZ-M52">
+                                <rect key="frame" x="0.0" y="11.333333333333334" width="100.66666666666667" height="16.333333333333329"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-LightItalic" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" name="summer"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="l0Q-XD-Z5z">
+                                <rect key="frame" x="100.66666666666666" y="0.0" width="39" height="39"/>
+                                <color key="tintColor" name="summer"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="39" id="6yL-TB-vae"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <color key="backgroundColor" name="charcoal"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="l0Q-XD-Z5z" secondAttribute="trailing" constant="10" id="4e1-6l-bff"/>
                     <constraint firstItem="64Q-x2-luQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Anc-GX-xN1"/>
+                    <constraint firstAttribute="trailing" secondItem="8VT-mp-Tty" secondAttribute="trailing" constant="10" id="EBt-KJ-XBy"/>
+                    <constraint firstAttribute="bottom" secondItem="8VT-mp-Tty" secondAttribute="bottom" constant="10" id="PIJ-sU-5Up"/>
                     <constraint firstAttribute="bottom" secondItem="64Q-x2-luQ" secondAttribute="bottom" constant="10" id="dV4-io-XAa"/>
-                    <constraint firstItem="l0Q-XD-Z5z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="hlH-HQ-hK4"/>
+                    <constraint firstItem="8VT-mp-Tty" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="f5r-0b-O5B"/>
                     <constraint firstItem="64Q-x2-luQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="q8g-kP-dft"/>
-                    <constraint firstAttribute="bottom" secondItem="l0Q-XD-Z5z" secondAttribute="bottom" constant="10" id="uai-Gh-gLZ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="checkImage" destination="l0Q-XD-Z5z" id="mCj-9R-vze"/>
                 <outlet property="levelName" destination="64Q-x2-luQ" id="JPD-ne-DOq"/>
+                <outlet property="questionNumber" destination="OdG-nZ-M52" id="HLd-Vw-B1C"/>
             </connections>
             <point key="canvasLocation" x="72.51908396946564" y="25.704225352112676"/>
         </tableViewCell>
